back-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: back-training-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-training-app
  template:
    metadata:
      labels:
        app: back-training-app
    spec:
      containers:
      - name: back-training-app
        image: axelpereira/k8s-training-test-app-back:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
