front-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: front-training-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-training-app
  template:
    metadata:
      labels:
        app: front-training-app
    spec:
      containers:
      - name: front-training-app
        image: axelpereira/k8s-training-test-app-front:dev3
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
