front-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: front-training-app
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: front-training-app
